--- a/css/header.css
+++ b/css/header.css
@@ -1,13 +1,14 @@
 header {
   margin: 0 15px;
 }
-.wrapper-nav {
+nav {
   display: flex;
   max-width: 1200px;
   margin: 0 auto;
   justify-content: space-between;
   align-items: center;
   background-color: #ffffff;
+  height: 8vh;
 }
 
 .logo {
@@ -21,23 +22,92 @@ header {
   background-color: #272727;
 }
 
-.wrapper-nav ul {
+.nav-list {
   display: flex;
   gap: 20px;
   flex-wrap: wrap;
   align-items: center;
   justify-content: flex-end;
 }
-.wrapper-nav ul li {
-  font-weight: 500;
-}
-.wrapper-nav ul li a {
+
+.nav-list li {
+  font-weight: 600;
   padding: 10px 15px;
+  transition: 0.3s;
 }
-.wrapper-nav ul li a:hover {
-  text-decoration: underline;
+.nav-list li:hover {
+  opacity: 0.7;
+}
+.nav-icons {
+  display: flex;
 }
 
-.wrapper-nav ul li a img {
+.nav-icons img {
   padding: 10px;
+  transition: 0.3s;
+}
+.nav-icons img:hover {
+  opacity: 0.7;
+}
+
+.mobile-menu {
+  display: none;
+  cursor: pointer;
+}
+.mobile-menu div {
+  width: 32px;
+  height: 2px;
+  background: #272727;
+  margin: 8px;
+  transition: 0.3s;
+}
+
+@media (max-width: 900px) {
+  body {
+    overflow-x: hidden;
+  }
+  .nav-list {
+    z-index: 999;
+    position: absolute;
+    top: 8vh;
+    right: 0;
+    width: 50vh;
+    height: 92vh;
+    background: #e0e0e0;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in;
+  }
+  .mobile-menu {
+    display: block;
+  }
+
+  .nav-list li {
+    opacity: 0;
+  }
+
+  .nav-list.active {
+    transform: translateX(0);
+  }
+  @keyframes navLinkFade {
+    from {
+      opacity: 0;
+      transform: translateX(50px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+  .mobile-menu.active .line1 {
+    transform: rotate(-45deg) translate(-8px, 8px);
+  }
+  .mobile-menu.active .line2 {
+    opacity: 0;
+  }
+  .mobile-menu.active .line3 {
+    transform: rotate(45deg) translate(-5px, -7px);
+  }
 }
