--- a/css/header.css
+++ b/css/header.css
@@ -1,10 +1,14 @@
 header {
+  position: fixed;
+  z-index: 999;
   margin: 0 15px;
+  width: 100%;
 }
 nav {
   display: flex;
   max-width: 1200px;
   margin: 0 auto;
+  padding: 0 25px;
   justify-content: space-between;
   align-items: center;
   background-color: #ffffff;
