--- a/css/header.css
+++ b/css/header.css
@@ -70,6 +70,9 @@ nav {
   body {
     overflow-x: hidden;
   }
+  .logo img {
+    width: 24px;
+  }
   .nav-list {
     z-index: 999;
     position: absolute;
