--- a/css/header.css
+++ b/css/header.css
@@ -94,4 +94,13 @@ nav {
   .nav-list.active {
     transform: translateX(0);
   }
+  .mobile-menu.active .line1 {
+    transform: rotate(-45deg) translate(-8px, 8px);
+  }
+  .mobile-menu.active .line2 {
+    opacity: 0;
+  }
+  .mobile-menu.active .line3 {
+    transform: rotate(45deg) translate(-5px, -7px);
+  }
 }
