--- a/css/header.css
+++ b/css/header.css
@@ -34,6 +34,10 @@ nav {
   justify-content: flex-end;
 }
 
+.nav-links {
+  display: flex;
+}
+
 .nav-list li {
   font-weight: 600;
   padding: 10px 15px;
@@ -59,10 +63,10 @@ nav {
   cursor: pointer;
 }
 .mobile-menu div {
-  width: 32px;
+  width: 25px;
   height: 2px;
   background: #272727;
-  margin: 8px;
+  margin: 5px;
   transition: 0.3s;
 }
 
@@ -81,11 +85,19 @@ nav {
     width: 50vh;
     height: 90vh;
     background: #e0e0e0;
-    flex-direction: column;
+    flex-direction: column-reverse;
     align-items: center;
-    justify-content: space-around;
+    justify-content: flex-end;
     transform: translateX(100%);
     transition: transform 0.3s ease-in;
+  }
+  .nav-links {
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+  }
+  .nav-icons {
+    margin-top: 30px;
   }
   .mobile-menu {
     display: block;
@@ -95,12 +107,12 @@ nav {
     transform: translateX(0);
   }
   .mobile-menu.active .line1 {
-    transform: rotate(-45deg) translate(-8px, 8px);
+    transform: rotate(-45deg) translate(-5px, 5px);
   }
   .mobile-menu.active .line2 {
     opacity: 0;
   }
   .mobile-menu.active .line3 {
-    transform: rotate(45deg) translate(-5px, -7px);
+    transform: rotate(45deg) translate(-2px, -5px);
   }
 }
