--- a/css/header.css
+++ b/css/header.css
@@ -40,8 +40,11 @@ nav {
 
 .nav-list li {
   font-weight: 600;
-  padding: 10px 15px;
   transition: 0.3s;
+}
+.nav-list li a {
+  padding: 10px 15px;
+  margin-left: 10px;
 }
 .nav-list li:hover {
   opacity: 0.7;
@@ -91,10 +94,15 @@ nav {
     transform: translateX(100%);
     transition: transform 0.3s ease-in;
   }
+  .nav-list li a {
+    padding: 10px 25px;
+    margin-left: 0;
+    margin-bottom: 10px;
+  }
   .nav-links {
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    gap: 40px;
   }
   .nav-icons {
     margin-top: 30px;
